--- a/src/styles/layout/_swipe.scss
+++ b/src/styles/layout/_swipe.scss
@@ -104,6 +104,10 @@
                 width: 100%;
                 height: 60%;
                 background: linear-gradient(0deg, #121212 30%, rgba(18, 18, 18, 0) 100%);
+
+                [data-theme="light"] & {
+                    background: linear-gradient(0deg, #F7F7F7 30%, rgba(247, 247, 247, 0) 100%);
+                }
             }
         }
 
