--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -4,11 +4,11 @@
             <div class="footer__logo wow animate__animated animate__fadeInUp">
                 <img src="/images/logo.svg" alt="logo">
             </div>
-            <picture class="footer__pig dark wow animate__animated animate__fadeInLeft" data-wow-delay="0.2s">
+            <picture class="footer__pig dark wow animate__animated animate__zoomIn" data-wow-delay="0.2s">
                 <source srcset="/images/footer-pig.webp" type="image/webp">
                 <img src="/images/footer-pig.png" alt="image not found">
             </picture>
-            <picture class="footer__pig light wow animate__animated animate__fadeInLeft" data-wow-delay="0.2s">
+            <picture class="footer__pig light wow animate__animated animate__zoomIn" data-wow-delay="0.2s">
                 <source srcset="/images/footer-pig-light.webp" type="image/webp">
                 <img src="/images/footer-pig-light.png" alt="image not found">
             </picture>
@@ -27,7 +27,7 @@
                 </a>
             </div> -->
         </div>
-        <a href="https://improvs.com/" target="_blank" class="footer__creator-link">
+        <a href="https://improvs.com/" target="_blank" class="footer__creator-link wow animate__animated animate__fadeInUp">
             <picture class="footer__creator">
                 <img class="dark" src="/images/creator.svg" alt="image not found">
                 <img class="light" src="/images/creator-light.svg" alt="image not found">
