Refine section-fees HTML by adding a newline at the end of the file. Adjust max-width in _fees.scss for better layout consistency. Implement conditional display logic in _simple.scss for light and dark themes to enhance user experience.

--- a/src/styles/layout/_simple.scss
+++ b/src/styles/layout/_simple.scss
@@ -117,9 +117,25 @@
         @include adaptive-value("margin-top", -25, -15, 1);
         @include adaptive-value("margin-bottom", 30, 10, 1);
 
-
         @include media ("<phone") {
             margin-top: 0;
+        }
+
+        &.light {
+            display: none;
+
+            [data-theme="light"] & {
+                display: block;
+                margin-top: -25px;
+            }
+        }
+
+        &.dark {
+            display: block;
+
+            [data-theme="light"] & {
+                display: none;
+            }
         }
     }
 
