--- a/src/styles/layout/_cards.scss
+++ b/src/styles/layout/_cards.scss
@@ -117,7 +117,7 @@
                     right: 50%;
                     transform: translateX(50%);
                     bottom: auto;
-                    top: -15%;
+                    top: -20%;
 
                     &::after {
                         content: '';
@@ -125,7 +125,7 @@
                         bottom: 0;
                         left: 0;
                         width: 100%;
-                        height: 40%;
+                        height: 30%;
                         background: linear-gradient(0deg, #1C1C1C 50.11%, rgba(28, 28, 28, 0.7) 69.41%, rgba(28, 28, 28, 0) 99.43%);
 
                         [data-theme="light"] & {
@@ -162,6 +162,10 @@
                 height: 415px;
             }
 
+            @include media ("<phone") {
+                padding-top: 30px;
+            }
+
             .cards-top__img {
                 position: absolute;
                 bottom: 0;
@@ -173,7 +177,7 @@
                 object-position: center;
 
                 @include media ("<tablet") {
-                    width: 80%;
+                    width: 85%;
                 }
             }
 
@@ -202,7 +206,7 @@
 .cards-middle {
 
     @include media ("<tablet") {
-        padding: 50px 0;
+        padding: 80px 0;
     }
 
     &__content {
@@ -295,7 +299,7 @@
                         bottom: 0;
                         left: 0;
                         width: 100%;
-                        height: 40%;
+                        height: 45%;
                         background: linear-gradient(0deg, #1C1C1C 50.09%, rgba(28, 28, 28, 0.7) 63.5%, rgba(28, 28, 28, 0) 96.94%);
 
 
@@ -311,7 +315,7 @@
                 }
 
                 @include media ("<410px") {
-                    max-width: 95%;
+                    max-width: 90%;
                     bottom: 10%;
                 }
             }
@@ -419,7 +423,7 @@
                 object-position: center;
 
                 @include media ("<tablet") {
-                    max-width: 98%;
+                    max-width: 85%;
                     width: 50%;
 
                     &::after {
@@ -546,7 +550,7 @@
                 }
 
                 @include media ("<phone") {
-                    max-width: 100%;
+                    max-width: 85%;
                 }
 
 
