--- a/src/styles/layout/_fees.scss
+++ b/src/styles/layout/_fees.scss
@@ -33,6 +33,10 @@
         color: transparent;
         @include gradient-text;
 
+        @include media ("<phone") {
+            margin-bottom: 20px;
+        }
+
         &.mob {
             display: none;
 
@@ -73,11 +77,11 @@
         &::before {
             content: '';
             position: absolute;
-            bottom: -8%;
+            bottom: -5%;
             left: 0;
             width: 100%;
-            height: 25%;
-            background: linear-gradient(0deg, #121212 32.04%, rgba(18, 18, 18, 0.7) 50.41%, rgba(18, 18, 18, 0) 96.25%);
+            height: 35%;
+            background: linear-gradient(0deg, #121212 25%, rgba(18, 18, 18, 0.7) 50.41%, rgba(18, 18, 18, 0) 96.25%);
 
             [data-theme="light"] & {
                 background: linear-gradient(0deg, #F7F7F7 32.04%, rgba(247, 247, 247, 0.7) 50.41%, rgba(247, 247, 247, 0) 96.25%);
@@ -115,9 +119,10 @@
         }
 
         &.top-text {
-            @include adaptive-value("font-size", 22, 16, 1);
+            @include adaptive-value("font-size", 22, 18, 1);
             color: #E8E8E8;
-            max-width: 280px;
+            max-width: 290px;
+            font-weight: 600;
             width: 100%;
             margin: 0 auto 8px auto;
 
