--- a/src/styles/layout/_magic.scss
+++ b/src/styles/layout/_magic.scss
@@ -1,12 +1,12 @@
 .magic {
     padding: 95px 0 145px 0;
 
-    .container {
-        position: relative;
+    @include media ("<tablet") {
+        padding: 40px 0;
     }
 
-    @include media ("<tablet") {
-        padding: 50px 0;
+    .container {
+        position: relative;
     }
 
     &__title {
@@ -111,6 +111,14 @@
 
             @include media ("<tablet") {
                 max-width: 345px;
+            }
+
+            br {
+                display: none;
+
+                @include media ("<phone") {
+                    display: block;
+                }
             }
         }
     }
