--- a/src/styles/layout/_swipe.scss
+++ b/src/styles/layout/_swipe.scss
@@ -46,7 +46,7 @@
         width: 100%;
         margin: 0 auto;
         @include gradient-text;
-        margin-bottom: 20px;
+        @include adaptive-value("margin-bottom", 20, 24, 1);
     }
 
     &__text {
