--- a/src/styles/layout/_wallet.scss
+++ b/src/styles/layout/_wallet.scss
@@ -110,7 +110,7 @@
         margin-bottom: 40px;
 
         @include media ("<phone") {
-            max-width: 315px;
+            max-width: 320px;
         }
     }
 
@@ -147,7 +147,7 @@
     position: relative;
 
     @include media ("<phone") {
-        padding: 80px 0;
+        padding: 80px 0 35px 0;
     }
 
     &::before {
@@ -304,7 +304,7 @@
         z-index: 1;
         top: 0;
         left: 0;
-        background: linear-gradient(180deg, #121212 33%, rgba(18, 18, 18, 0) 75%);
+        background: linear-gradient(180deg, #121212 38%, rgba(18, 18, 18, 0) 75%);
         width: 100%;
         height: 100%;
 
@@ -312,7 +312,6 @@
             background: linear-gradient(180deg, #F7F7F7 33.98%, rgba(247, 247, 247, 0) 75%);
         }
     }
-
 
     &::after {
         content: '';
@@ -395,7 +394,7 @@
         max-width: 635px;
         width: 100%;
         margin: 0 auto;
-        @include adaptive-value("margin-top", -150, 0, 1);
+        @include adaptive-value("margin-top", -150, -10, 1);
 
         @include media ("<desktop") {
             width: 55%;
