--- a/src/styles/layout/_fees.scss
+++ b/src/styles/layout/_fees.scss
@@ -32,6 +32,7 @@
         text-align: center;
         color: transparent;
         @include gradient-text;
+        margin: 0;
 
         @include media ("<phone") {
             margin-bottom: 20px;
@@ -125,6 +126,12 @@
             font-weight: 600;
             width: 100%;
             margin: 0 auto 8px auto;
+
+            &.mob{
+                @include media ("<phone") {
+                    max-width: 295px;
+                }
+            }
 
             [data-theme="light"] & {
                 color: $black-text;
