--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -27,10 +27,14 @@
                 </a>
             </div> -->
         </div>
-        <a href="https://improvs.com/" target="_blank" class="footer__creator-link wow animate__animated animate__fadeInUp">
+        <a href="https://improvs.com/" target="_blank"
+            class="footer__creator-link wow animate__animated animate__fadeInUp">
             <picture class="footer__creator">
-                <img class="dark" src="/images/creator.svg" alt="image not found">
-                <img class="light" src="/images/creator-light.svg" alt="image not found">
+                <span class="footer__creator-text dark">
+                    Created by
+                    <img class="footer__creator-logo" src="/images/improvse-logo.png" alt="image not found">
+                </span>
+                <img class="footer__creator-logo light" src="/images/creator-light.svg" alt="image not found">
             </picture>
         </a>
     </div>
