fix ready title color

--- a/src/styles/layout/_ready.scss
+++ b/src/styles/layout/_ready.scss
@@ -49,8 +49,8 @@
             -webkit-text-fill-color: $violet;
 
             [data-theme="light"] & {
-                color: $pink;
-                -webkit-text-fill-color: $pink;
+                color: #FA5EB5;
+                -webkit-text-fill-color: #FA5EB5;
             }
         }
     }
